<resources>
    <string name="app_name">Rio Habladores</string>

    <!-- Items Navbar -->
    <string name="nav_header_title">Habladores RioSupermarket</string>
    <string name="nav_header_subtitle">habladores.rio@riomarket.com</string>
    <string name="nav_header_desc">Impresión de habladores RioSupermarket</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">cadClose</string>

    <!-- Items Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_habladores">Habladores</string>
    <string name="menu_escanear">Escanear</string>
    <string name="menu_buscar">Categorías</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_salir">Cerrar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Text Button -->
    <string name="button_print_all">Imprimir todos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>